# fused_linear_gelu

./: .gitignore  README.md  baseline.py  fx_pass.py  pyproject.toml  setup.py
benchmark/: benchmark.py  benchmark_fx.py
fused_linear_gelu/: __init__.py  ops.py
fused_linear_gelu/cuda/: fused_linear_gelu.cu
test/: test_extension.py
